<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_meeting_fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Object Meeting -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_object_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/edit_input_object_meeting"
                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                app:startIconDrawable="@drawable/ic_baseline_help_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_object_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Location -->

                <Spinner
                    android:id="@+id/spinner_layout_room_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    />

            <!-- Date -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/edit_input_date_meeting"
                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Hour -->
            <!-- Hour -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Begin -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/text_layout_hour_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/edit_input_hour_start"
                    android:layout_weight="1"/>

                <!-- End -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/text_layout_hour_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/edit_input_hour_end"
                    android:layout_weight="1"/>

            </LinearLayout>


            <!-- List of participants -->
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_participant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:selectionRequired="false"
            />

            <!-- Buttons -->
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="2"
                android:layout_gravity="center"
                android:useDefaultMargins="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:enabled="true"
                    android:text="@string/button_cancel"
                    app:backgroundTint="#3D73DD"
                    app:cornerRadius="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/button_ok"
                    app:cornerRadius="20dp"
                    style="@style/Widget.MaterialComponents.Button"/>

            </GridLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>