<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/list_meetings_fragment">

    <HorizontalScrollView
        android:id="@+id/horizontalFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_Room_Item"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#F3EEEE"
            android:text="Default"
            android:theme="@style/Theme.MaterialComponents.Light"
            />

    </HorizontalScrollView>
    <!-- Refresh Button -->
    <TextView
        android:id="@+id/background_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_meetings"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/refresh_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalFilter"
        android:visibility="gone"
        android:text="ACTUALISER"/>


    <!-- RecyclerView implementation -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_list_meetings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refresh_Button" />

    <!-- FloatingActionButton implementation -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_list_meetings_fragment"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="#D21024"
        android:contentDescription="@string/fab_content_description"
        android:src="@drawable/ic_baseline_add_"
        app:backgroundTint="#BA0918"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>