<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filterByDate"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="never"
        android:title="Filter by date">
    </item>
    <item
        android:id="@+id/filterByRoom"
        android:icon="@drawable/ic_baseline_menu_24"
        app:showAsAction="never"
        android:title="Filter by room">
    </item>
</menu>